--- a/29/main.tex
+++ b/29/main.tex
@@ -97,16 +97,16 @@
 		\item គេឲ្យរបាមេដែកចំនួន $2$ ដូចរូប ។ គណនាដែនម៉ាញេទិចផ្គួបត្រង់
 		$M$ ។
 	\end{minipage}
-	\begin{minipage}{0.40\textwidth}
-		\includegraphics[scale=5, width=1\textwidth, center]{ex1}
-	\end{minipage}
+%	\begin{minipage}{0.40\textwidth}
+%		\includegraphics[scale=5, width=1\textwidth, center]{ex1}
+%	\end{minipage}
 	\begin{minipage}{0.60\textwidth}
 		\item គេឲ្យរបាមេដែកចំនួន $3$ ដូចរូប ។ ចូរគូសវ៉ិចទ័រដែនម៉ាញេទិចទាំងបី រួចកំណត់ដែនម៉ាញេទិចផ្គួបត្រង់
 		$M$ ។
 	\end{minipage}
-	\begin{minipage}{0.40\textwidth}
-		\includegraphics[width=1\textwidth, center]{ex2}
-	\end{minipage}
+%	\begin{minipage}{0.40\textwidth}
+%		\includegraphics[width=1\textwidth, center]{ex2}
+%	\end{minipage}
 	\item បូប៊ីនមួយមានចំនួន $1000$ ស្ពៀ ដែលមានកាំ $R=2.5cm$ និងប្រវែង $50cm$ ។
 	\begin{enumerate}[k]
 		\item តើបូប៊ីននេះអាចចាត់ទុកជាសូលេណូអ៊ីតឬទេ?
